# localizing

./: QM_federal.ipynb  system_info.json
.ipynb_checkpoints/: QM_BNN-checkpoint.ipynb  QM_eval_nnRL-checkpoint.ipynb  QM_federal-checkpoint.ipynb  README-checkpoint.md
Federated RL-testing/Test-qsensoropt-master-IND/docs/: index.rst
Federated RL-testing/Test-qsensoropt-master-IND/examples/: PlotFig.py  PlotFigL.py  nv_center_dc_phase.py
Federated RL-testing/Test-qsensoropt-master-IND/tests/: bound_stateful_interferometer.py  interferometer.py  interferometer_hypothesis_testing.py  tests.py  tests_resample.py
Federated RL-testing/Test-qsensoropt-master-nnRL/: README.md
Federated RL-training/Train-RL-Federal/: pyproject.toml
Federated RL-training/Train-RL-Federal/examples/: PlotFig.py  nv_center_dc.py  nv_center_dc_phase.py
Federated RL-training/Train-RL-Federal/examples/.ipynb_checkpoints/: nv_center_dc-checkpoint.py
Federated RL-training/Train-RL-Federal/src/qsensoropt/: __init__.py  simulation.py  stateful_metrology.py  stateless_phys_model.py  utils.py
Federated RL-training/Train-RL-Federal/src/qsensoropt/.ipynb_checkpoints/: parameter-checkpoint.py  simulation-checkpoint.py  utils-checkpoint.py
Federated RL-training/Train-RL-noF/: Training-result-stop1300.xlsx
Federated RL-training/queso-main/: create_yamlFile.py
queso_run_BNN/: config.yaml  machine-info.json  metrics.csv  nn-metadata.json  nn.h5  stage1_estimate.json  train_omega.h5  train_samples.h5
queso_run_BNN/ckpts/: _CHECKPOINT_METADATA  _METADATA  manifest.ocdbt
(+4570 files in other folders)
