[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qsensoropt"
version = "1.1.0"
authors = [
  { name="Federico Belliardo", email="federico.belliardo@sns.it" },
  { name="Fabio Zoratti", email="fabio.zoratti@sns.it" },
]
description = "https://arxiv.org/abs/2312.16985"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10, <3.12"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "tensorflow >= 2.6, <=2.12",
    "numpy ~= 1.19",
    "pandas ~= 1.5",
    "progressbar2 ~= 4.2.0",
    "jupyter ~= 1.0.0",
    "matplotlib ~= 3.7.1",
]
[project.optional-dependencies]
tests = [
    "coverage ~= 6.5.0",
]
docs = [
    "Sphinx ~= 5.3.0",
    "sphinx-pyproject ~= 0.1.0",
    "sphinx-rtd-theme ~= 1.0.0",
]
lint = [
    "mypy ~= 0.982",
    "pylint ~= 2.15",
    "prospector ~= 1.7",
]

[project.urls]
"Homepage" = "https://gitlab.com/federico.belliardo/qsensoropt"
"Bug Tracker" = "https://gitlab.com/federico.belliardo/qsensoropt/-/issues"
"Documentation" = "https://federico.belliardo.gitlab.io/qsensoropt/"
